load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "link",
    srcs = [
        "job.go",
        "server.go",
    ],
    importpath = "github.com/strotz/chainsaw/link",
    visibility = ["//visibility:public"],
    deps = ["//link/def"],
)

go_test(
    name = "link_test",
    srcs = [
        "job_test.go",
        "server_test.go",
    ],
    embed = [":link"],
    deps = [
        "//link/def",
        "@com_github_stretchr_testify//require",
    ],
)
