load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//build/rules:gomock.bzl", "gomock")

go_library(
    name = "link",
    srcs = [
        "client.go",
        "server.go",
    ],
    importpath = "github.com/strotz/chainsaw/link",
    visibility = ["//visibility:public"],
    deps = [
        "//link/def",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
    ],
)

gomock(
    name = "transport_client_mocks",
    out = "transport_client_test.go",
    interfaces = ["ChainClient"],
    library = "//link/def",
    package = "link",
    visibility = ["//visibility:public"],
)

go_test(
    name = "link_test",
    size = "small",
    srcs = [
        "client_test.go",
        "server_test.go",
        "transport_client_test.go",
    ],
    embed = [":link"],
    deps = [
        "//link/def",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:grpc",  #keep
        "@org_uber_go_mock//gomock",
    ],
)
