load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "link",
    srcs = [
        "client.go",
        "server.go",
        "table.go",
    ],
    importpath = "github.com/strotz/chainsaw/link",
    visibility = ["//visibility:public"],
    deps = [
        "//link/def",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "link_test",
    size = "small",
    srcs = [
        "client_test.go",
        "server_test.go",
        "table_test.go",
    ],
    embed = [":link"],
    deps = [
        "//link/def",
        "//link/sim",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_protobuf//proto",
    ],
)
