load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "def_proto",
    srcs = ["service.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "def_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/strotz/chainsaw/link/def",
    proto = ":def_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "def",
    embed = [":def_go_proto"],
    importpath = "github.com/strotz/chainsaw/link/def",
    visibility = ["//visibility:public"],
)
