load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "serverfixture",
    srcs = ["serverfixture.go"],
    importpath = "github.com/strotz/chainsaw/link/serverfixture",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_strotz_runner//:runner",
        "@io_bazel_rules_go//go/runfiles",
    ],
)
