load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tests",
    srcs = ["runtime.go"],
    importpath = "github.com/strotz/chainsaw/link/tests",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_stretchr_testify//require",
        "@io_bazel_rules_go//go/tools/bazel",
    ],
)
