load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "hello_test",
    size = "small",
    srcs = ["hello_test.go"],
    data = [
        "//link/server",
    ],
    deps = [
        "//link",
        "//link/def",
        "//link/serverfixture",
        "//link/tests",
        "@com_github_stretchr_testify//require",
    ],
)
